--- a/hobbies.html
+++ b/hobbies.html
@@ -7,11 +7,11 @@
 <body>
     <h1>MIS HOBBIES</h1>
     <nav>
-        <a href="portada.html">portada</a>
+        <a href="portada.html">Portada</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="series.html">Series</a>
         <a href="peliculas.html">Peliculas</a>
-        <a href="contacto.html">contacto</a>
+        <a href="contacto.html">Contacto</a>
     </nav>
 
         <ul>
