--- a/contacto.html
+++ b/contacto.html
@@ -9,11 +9,11 @@
 <body>
     <h1>CONTACTO</h1>
     <nav>
-        <a href="portada.html">portada</a>
+        <a href="portada.html">Portada</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="series.html">Series</a>
         <a href="peliculas.html">Peliculas</a>
-        <a href="contacto.html">contacto</a>
+        <a href="contacto.html">Contacto</a>
     </nav>
     <br>
     <br>
