--- a/portada.html
+++ b/portada.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
     <title>PORTDADA</title>
-    <
 </head>
 <body>
     <h1>PORTDADA</h1>
     <nav>
-        <a href="portada.html">portada</a>
+        <a href="portada.html">Portada</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="series.html">Series</a>
         <a href="peliculas.html">Peliculas</a>
-        <a href="contacto.html">contacto</a>
+        <a href="contacto.html">Contacto</a>
     </nav>
     <div class="portada"> <img src="img/ezio.jpg"></div>
 </body>
