Landing v1.0(sin estilos)

--- a/contacto.html
+++ b/contacto.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-    <h1>CONTACTO</h1>
+    <h1>contacto</h1>
     <nav>
-        <a href="portada.html">Portada</a>
+        <a href="index.html">Portada</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="series.html">Series</a>
         <a href="peliculas.html">Peliculas</a>
@@ -26,7 +26,7 @@
     </fomr>
 
     <footer>
-        <p>Telefono: 6442511391</p>
+        <p>Telefono: 64425113</p>
         <p>Correo-Electornico: samuel.medellin@potros.itson.edu.mx</p>
     </footer>
 </body>
