--- a/hobbies.html
+++ b/hobbies.html
@@ -5,9 +5,9 @@
     <title>hobbies</title>
 </head>
 <body>
-    <h1>MIS HOBBIES</h1>
+    <h1>mis hobbies</h1>
     <nav>
-        <a href="portada.html">Portada</a>
+        <a href="index.html">Portada</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="series.html">Series</a>
         <a href="peliculas.html">Peliculas</a>
