--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-    <title>PORTDADA</title>
+    <title>Landingpage</title>
 </head>
 <body>
-    <h1>PORTDADA</h1>
+    <h1>portada</h1>
     <nav>
-        <a href="portada.html">Portada</a>
+        <a href="index.html">Portada</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="series.html">Series</a>
         <a href="peliculas.html">Peliculas</a>
         <a href="contacto.html">Contacto</a>
     </nav>
-    <div class="portada"> <img src="img/ezio.jpg"></div>
+
+    <div class="portada"> <img src="img/ezio.jpg">
+        <label>Nombre: Samuel Alejandro Medellin Carrillo</label><br>
+        <label>Carrera:Ingenieria en Software</label>
+    </div>
+
 </body>
 </html>
