--- a/peliculas.html
+++ b/peliculas.html
@@ -5,9 +5,9 @@
     <title>peliculas</title>
 </head>
 <body>
-    <h1>PELICULAS FAVORITAS</h1>
+    <h1>peliculas favoritas</h1>
     <nav>
-        <a href="portada.html">Portada</a>
+        <a href="index.html">Portada</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="series.html">Series</a>
         <a href="peliculas.html">Peliculas</a>
