--- a/series.html
+++ b/series.html
@@ -5,7 +5,7 @@
     <title>series</title>
 </head>
 <body>
-    <h1>SERIES FAVORITAS</h1>
+    <h1>series favortias</h1>
     <nav>
         <a href="portada.html">portada</a>
         <a href="hobbies.html">Hobbies</a>
