Cosas de Arturo: Proyecto en Index
Cambios en el formato del index junto con mis datos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Landingpage</title>
 </head>
 <body>
-    <h1>portada</h1>
+    <h1>Portada</h1>
     <nav>
         <a href="index.html">Portada</a>
         <a href="hobbies.html">Hobbies</a>
@@ -15,9 +15,15 @@
         <a href="contacto.html">Contacto</a>
     </nav>
 
-    <div class="portada"> <img src="img/ezio.jpg">
-        <label>Nombre: Samuel Alejandro Medellin Carrillo</label><br>
-        <label>Carrera:Ingenieria en Software</label>
+   <h2> Estudiantes </h2>
+    <div class="portada"> <img src="img/ezio.jpg" >
+        <h3>Nombre: Samuel Alejandro Medellin Carrillo</label><br>
+        <h3>Carrera:Ingenieria en Software</h3>
+    </div>
+    <div class="portadaarturo"> <img  src="img/Arturo.jpg" width="300px" height="300px">
+        <h3>Nombre: Jesus Arturo Cervantes</h3>
+        <h3>Carrera:Ingenieria en Software</h3>
+        <h3>7mo Semestre</h3>
     </div>
 
 </body>
