--- a/series.html
+++ b/series.html
@@ -5,15 +5,24 @@
     <title>series</title>
 </head>
 <body>
-    <h1>series favortias</h1>
+    <h1>Multimedia favorita</h1>
     <nav>
-        <a href="portada.html">portada</a>
+        <a href="index.html">Portada</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="series.html">Series</a>
         <a href="peliculas.html">Peliculas</a>
-        <a href="contacto.html">contacto</a>
+        <a href="contacto.html">Contacto</a>
     </nav>
-
+        <label>Peliculas de Samuel</label>
+        <ul>
+            <li>The Revenant</li>
+            <li>Harry Potter(todas)</li>
+            <li>The Lord of the rings(todas)</li>
+            <li>Hobbit(todas)</li>
+            <li>Todas las de Marvel</li>
+            <li>Tenecius D</li>
+        </ul>
+        <br>
         <ul>
             <li>Breaking Bad</li>
             <li>The Witcher</li>
@@ -21,6 +30,12 @@
             <li>Vikings</li>
             <li>Black Mirror</li>
         </ul>
-
+        <label>Cosas que le gustan a Arturo</label>
+        <ul>
+                <li>La Verdadera Historia de Mexico (Spotify)</li>
+                <li>Gotham (Netflix)</li>
+                <li>Malcolm (TV)</li>
+                <li>Sunderland 'Till I Die</li>
+        </ul>
 </body>
 </html>
