--- a/hobbies.html
+++ b/hobbies.html
@@ -5,7 +5,7 @@
     <title>hobbies</title>
 </head>
 <body>
-    <h1>mis hobbies</h1>
+    <h1>Hobbies</h1>
     <nav>
         <a href="index.html">Portada</a>
         <a href="hobbies.html">Hobbies</a>
@@ -13,7 +13,7 @@
         <a href="peliculas.html">Peliculas</a>
         <a href="contacto.html">Contacto</a>
     </nav>
-
+    <label>Hobbies de Samuel</label>
         <ul>
             <li>Jugar Videojuegos</li>
             <li>Navegar por internet</li>
@@ -21,6 +21,13 @@
             <li>Ver Series o Peliculas</li>
             <li>Leer</li>
         </ul>
-
+        <label>Hobbies de Arturo</label>
+        <ul>
+            <li>Lectura</li>
+            <li>Videojuegos</li>
+            <li>Musica</li>
+            <li>Produccion Audiovisual</li>
+            <li>Programacion</li>
+        </ul>
 </body>
 </html>
