--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>contacto</h1>
+    <h1>Contactos</h1>
     <nav>
         <a href="index.html">Portada</a>
         <a href="hobbies.html">Hobbies</a>
@@ -17,18 +17,17 @@
     </nav>
     <br>
     <br>
-    <fomr>
-        <label>Nombre:   </label><input type="text"><br>
-        <label>Apellidos:</label><input type="text"><br>
-        <label>Telefono:</label><input type="tel"><br>
-        <label>E-mail:   </E-mail></label><input type="email"><br>
-        <input type="submit" value="Enviar Formulario">
-    </fomr>
 
-    <footer>
-        <p>Telefono: 64425113</p>
-        <p>Correo-Electornico: samuel.medellin@potros.itson.edu.mx</p>
-    </footer>
+    <h2> Estudiantes </h2>
+    <div class="portada"> <img src="img/ezio.jpg" >
+        <h3>Nombre: Samuel Alejandro Medellin Carrillo</label><br>
+        <h3>Carrera:Ingenieria en Software</h3>
+    </div>
+    <div class="portadaarturo"> <img  src="img/Arturo.jpg" width="300px" height="300px">
+        <h3>Nombre: Jesus Arturo Cervantes</h3>
+        <h3>Carrera:Ingenieria en Software</h3>
+        <h3>7mo Semestre</h3>
+    </div>
 </body>
 
 </html>
