Arturo's Hobbies changed
My hobbies but in english

--- a/hobbies.html
+++ b/hobbies.html
@@ -7,11 +7,11 @@
 <body>
     <h1>Hobbies</h1>
     <nav>
-        <a href="index.html">Portada</a>
+        <a href="index.html">Index</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="series.html">Series</a>
-        <a href="peliculas.html">Peliculas</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="peliculas.html">Movies</a>
+        <a href="contacto.html">Contact</a>
     </nav>
     <label>Hobbies de Samuel</label>
         <ul>
@@ -21,13 +21,13 @@
             <li>Ver Series o Peliculas</li>
             <li>Leer</li>
         </ul>
-        <label>Hobbies de Arturo</label>
+        <label>Arturo's Hobbies</label>
         <ul>
-            <li>Lectura</li>
-            <li>Videojuegos</li>
-            <li>Musica</li>
-            <li>Produccion Audiovisual</li>
-            <li>Programacion</li>
+            <li>Reading</li>
+            <li>Play videogames</li>
+            <li>Music</li>
+            <li>Audiovisual Production </li>
+            <li>Codding</li>
         </ul>
 </body>
 </html>
