--- a/contacto.html
+++ b/contacto.html
@@ -7,26 +7,26 @@
 </head>
 
 <body>
-    <h1>Contactos</h1>
+    <h1>Contacts</h1>
     <nav>
-        <a href="index.html">Portada</a>
+        <a href="index.html">Index</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="series.html">Series</a>
-        <a href="peliculas.html">Peliculas</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="peliculas.html">Movies</a>
+        <a href="contacto.html">Contact</a>
     </nav>
     <br>
     <br>
 
-    <h2> Estudiantes </h2>
+    <h2> Students </h2>
     <div class="portada"> <img src="img/ezio.jpg" >
         <h3>Nombre: Samuel Alejandro Medellin Carrillo</label><br>
         <h3>Carrera:Ingenieria en Software</h3>
     </div>
     <div class="portadaarturo"> <img  src="img/Arturo.jpg" width="300px" height="300px">
-        <h3>Nombre: Jesus Arturo Cervantes</h3>
-        <h3>Carrera:Ingenieria en Software</h3>
-        <h3>7mo Semestre</h3>
+        <h3>Name: Jesus Arturo Cervantes</h3>
+        <h3>Major:Ingenieria en Software</h3>
+        <h3>7th Grade</h3>
     </div>
 </body>
 
