Changes in my movies and the NAV
Also, with the changes in the format

--- a/peliculas.html
+++ b/peliculas.html
@@ -5,15 +5,15 @@
     <title>peliculas</title>
 </head>
 <body>
-    <h1>peliculas favoritas</h1>
+    <h1>Favorite Movies</h1>
     <nav>
-        <a href="index.html">Portada</a>
+        <a href="index.html">Index</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="series.html">Series</a>
-        <a href="peliculas.html">Peliculas</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="peliculas.html">Movies</a>
+        <a href="contacto.html">Contact</a>
     </nav>
-
+    <h1>Samuel's Movies</h1>
         <ul>
             <li>The Revenant</li>
             <li>Harry Potter(todas)</li>
@@ -21,6 +21,12 @@
             <li>Hobbit(todas)</li>
             <li>Todas las de Marvel</li>
             <li>Tenecius D</li>
+        </ul>
+        <h1>Arturo's Movies</h1>
+    <ul>
+            <li>Who Killed Bloddy Valentine?</li>
+            <li>Grand Theft Auto: San Andreas - The Introduction</li>
+            <li>The Beatles> Get Back</li>
         </ul>
 
 </html>
