Changes in my tastes
Tastes and format new

--- a/series.html
+++ b/series.html
@@ -7,11 +7,11 @@
 <body>
     <h1>Multimedia favorita</h1>
     <nav>
-        <a href="index.html">Portada</a>
+        <a href="index.html">Index</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="series.html">Series</a>
-        <a href="peliculas.html">Peliculas</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="peliculas.html">Movies</a>
+        <a href="contacto.html">Contact</a>
     </nav>
         <label>Peliculas de Samuel</label>
         <ul>
@@ -30,7 +30,7 @@
             <li>Vikings</li>
             <li>Black Mirror</li>
         </ul>
-        <label>Cosas que le gustan a Arturo</label>
+        <label>Arturo's content</label>
         <ul>
                 <li>La Verdadera Historia de Mexico (Spotify)</li>
                 <li>Gotham (Netflix)</li>
